Modification de la version + corrections/ajustements textuels dans la doc incluse + ajout auto de la version dans la doc incluse.

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,8 @@
         </qc-piv-header>
 
         <div class="qc-container">
-            <span class="qc-subhead">Version 1.0.0</span>
+            <span class="qc-subhead"
+                  id="version"></span>
             <h1>Catalogue du système de design gouvernemental</h1>
             <div class="main-menu">
                 <ul>
@@ -629,7 +630,7 @@
             </table>
 
             <h3>Alerte jaune - Message hautement prioritaire</h3>
-            <p><a href="#maskable-alert" id="show-qc-alert">Réaficher l'alerte</a></p>
+            <p><a href="#maskable-alert" id="show-qc-alert">Réafficher l'alerte</a></p>
 
             <div id="maskable-alert">
                 <qc-alert id="alert-warning"
@@ -751,7 +752,7 @@
                 </thead>
             </table>
 
-            <h4>Emplacement imbriqués disponibles (élément html <i>slot</i>)</h4>
+            <h4>Emplacements imbriqués disponibles (éléments html de type <i>slot</i>)</h4>
             <div class="table-wrapper">
 
             </div>
@@ -766,15 +767,15 @@
                 <tbody>
                     <tr>
                         <td>title</td>
-                        <td>Personalisation du titre du bandeau.</td>
+                        <td>Zone du titre du bandeau.</td>
                     </tr>
                     <tr>
                         <td>links</td>
-                        <td>Personnalisation des liens à droite du bandeau.</td>
+                        <td>Zone des liens à droite du bandeau.</td>
                     </tr>
                     <tr>
                         <td>search-button</td>
-                        <td>Bouton de recherche, <a href="#pivEnteteExempleRecherche">voir l'exemple.</a></td>
+                        <td>Zone du bouton de recherche, <a href="#pivEnteteExempleRecherche">voir l'exemple.</a></td>
                     </tr>
                     <tr>
                         <td>search-zone</td>
