--- a/public/index.html
+++ b/public/index.html
@@ -646,7 +646,7 @@
                 </tbody>
             </table>
 
-            <h4>Places d'insertion de contenu</h4>
+            <h4>Emplacement d'insertion de contenu</h4>
 
             <p>Ci-dessous en encadré, l'emplacement disponibles pour insérer du contenu dans le composant.</p>
 
